Major redesign: centered landing page with logo/tagline, removed top bar, updated categories, simplified contact form, removed wishlist feature completely, updated footer with new social media (FB/IG/Google/Twitter/WhatsApp), payment methods (Amex/Visa/MC/ApplePay/GooglePay), added 'Lab Grown Diamonds' branding

--- a/contact.html
+++ b/contact.html
@@ -41,11 +41,12 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle">Categories <i class="fas fa-chevron-down"></i></a>
                             <ul class="dropdown-menu">
+                                <li><a href="shop.html?category=old-collection">Old Collection</a></li>
+                                <li><a href="shop.html?category=bracelets">Bracelets</a></li>
                                 <li><a href="shop.html?category=rings">Rings</a></li>
                                 <li><a href="shop.html?category=necklaces">Necklaces</a></li>
-                                <li><a href="shop.html?category=bracelets">Bracelets</a></li>
+                                <li><a href="shop.html?category=pendants">Pendants</a></li>
                                 <li><a href="shop.html?category=earrings">Earrings</a></li>
-                                <li><a href="shop.html?category=watches">Watches</a></li>
                             </ul>
                         </li>
                         <li><a href="about.html">About</a></li>
@@ -55,10 +56,6 @@
                     <div class="nav-icons">
                         <button class="icon-btn search-btn" id="searchBtn">
                             <i class="fas fa-search"></i>
-                        </button>
-                        <button class="icon-btn wishlist-btn" id="wishlistBtn">
-                            <i class="fas fa-heart"></i>
-                            <span class="badge" id="wishlistCount">0</span>
                         </button>
                         <button class="icon-btn cart-btn" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
@@ -140,44 +137,26 @@
         <div class="container">
             <div class="contact-layout">
                 <div class="contact-form-wrapper">
-                    <h2>Send Us A Message</h2>
-                    <p>Have a question about our products or services? Fill out the form below and we'll get back to you as soon as possible.</p>
+                    <h2>Get In Touch</h2>
+                    <p>Have questions about our lab-grown diamonds or jewelry? We'd love to hear from you!</p>
                     <form class="contact-form" id="contactForm">
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="firstName">First Name *</label>
+                                <label for="firstName">Name *</label>
                                 <input type="text" id="firstName" name="firstName" required>
                             </div>
                             <div class="form-group">
-                                <label for="lastName">Last Name *</label>
-                                <input type="text" id="lastName" name="lastName" required>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="email">Email Address *</label>
+                                <label for="email">Email *</label>
                                 <input type="email" id="email" name="email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" id="phone" name="phone">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="subject">Subject *</label>
-                            <select id="subject" name="subject" required>
-                                <option value="">Select a subject</option>
-                                <option value="general">General Inquiry</option>
-                                <option value="product">Product Question</option>
-                                <option value="order">Order Status</option>
-                                <option value="returns">Returns & Exchanges</option>
-                                <option value="custom">Custom Design</option>
-                                <option value="other">Other</option>
-                            </select>
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" id="phone" name="phone" placeholder="(Optional)">
                         </div>
                         <div class="form-group">
                             <label for="message">Message *</label>
-                            <textarea id="message" name="message" rows="6" required></textarea>
+                            <textarea id="message" name="message" rows="5" required placeholder="Tell us your inquiry..."></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-large">Send Message</button>
                     </form>
@@ -185,20 +164,14 @@
 
                 <div class="contact-sidebar">
                     <div class="sidebar-card">
-                        <h3>Why Contact Us?</h3>
-                        <ul class="contact-features">
-                            <li><i class="fas fa-check"></i> Expert Jewelry Advice</li>
-                            <li><i class="fas fa-check"></i> Custom Design Consultation</li>
-                            <li><i class="fas fa-check"></i> Size & Style Guidance</li>
-                            <li><i class="fas fa-check"></i> Order Tracking Assistance</li>
-                            <li><i class="fas fa-check"></i> Care & Maintenance Tips</li>
-                            <li><i class="fas fa-check"></i> Returns & Warranty Support</li>
-                        </ul>
+                        <h3>📞 Call Us</h3>
+                        <p><strong>Phone:</strong> 929-648-0535</p>
+                        <p><strong>Email:</strong> info@iyjewlz.com</p>
                     </div>
 
                     <div class="sidebar-card">
-                        <h3>Quick Response</h3>
-                        <p>We typically respond to all inquiries within 24 hours during business days. For urgent matters, please call us directly.</p>
+                        <h3>💎 About Us</h3>
+                        <p>We specialize in lab-grown diamonds and premium jewelry. Our online store offers ethically sourced, certified gemstones with exceptional quality and value.</p>
                     </div>
 
                     <div class="sidebar-card">
