Removed 'Meet Our Team' section from about page, updated footer categories in contact page

--- a/contact.html
+++ b/contact.html
@@ -270,11 +270,12 @@
                 <div class="footer-col">
                     <h4>Categories</h4>
                     <ul>
+                        <li><a href="shop.html?category=old-collection">Old Collection</a></li>
+                        <li><a href="shop.html?category=bracelets">Bracelets</a></li>
                         <li><a href="shop.html?category=rings">Rings</a></li>
                         <li><a href="shop.html?category=necklaces">Necklaces</a></li>
-                        <li><a href="shop.html?category=bracelets">Bracelets</a></li>
+                        <li><a href="shop.html?category=pendants">Pendants</a></li>
                         <li><a href="shop.html?category=earrings">Earrings</a></li>
-                        <li><a href="shop.html?category=watches">Watches</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
