UX: hamburger menu overlay + body lock; search debounce + keyboard navigation; glowing Coming Soon banner for Shop & Categories

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
                 <h2>Categories — Coming Soon</h2>
                 <p>We're curating beautiful collections. Check back soon.</p>
             </div>
+            <div class="coming-soon-banner">
+                <div style="font-size: 48px;">✨</div>
+                <h2>Shop & Categories — Coming Soon</h2>
+                <p>Under construction. Follow us for updates.</p>
+            </div>
         </div>
     </section>
 
