--- a/shop.html
+++ b/shop.html
@@ -85,10 +85,10 @@
     <!-- Shop Section -->
     <section class="shop-section">
         <div class="container">
-            <div style="text-align:center; padding: 80px 20px;">
+            <div class="coming-soon-banner">
                 <div style="font-size: 64px;">💎</div>
-                <h2 style="margin-top: 20px;">Our Shop Is Coming Soon</h2>
-                <p style="color:#666; margin-top: 10px;">We're preparing a beautiful collection. Please check back later.</p>
+                <h2>Shop & Categories — Coming Soon</h2>
+                <p>We're preparing a beautiful collection. Please check back later.</p>
             </div>
         </div>
     </section>
