Update all email references to iyjewlz7@gmail.com

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <div class="top-bar-content">
                     <div class="contact-info">
                         <span><i class="fas fa-phone"></i> +1 (555) 123-4567</span>
-                        <span><i class="fas fa-envelope"></i> davidyagudayev2018@gmail.com</span>
+                        <span><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -109,7 +109,7 @@
                         <i class="fas fa-envelope"></i>
                     </div>
                     <h3>Email Us</h3>
-                    <p>General: davidyagudayev2018@gmail.com<br>Support: support@iyjewlz.com<br>Sales: sales@iyjewlz.com</p>
+                    <p>General: iyjewlz7@gmail.com<br>Support: iyjewlz7@gmail.com<br>Sales: iyjewlz7@gmail.com</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">
@@ -156,7 +156,7 @@
                     <div class="sidebar-card">
                         <h3>📞 Call Us</h3>
                         <p><strong>Phone:</strong> 929-648-0535</p>
-                        <p><strong>Email:</strong> davidyagudayev2018@gmail.com</p>
+                        <p><strong>Email:</strong> iyjewlz7@gmail.com</p>
                     </div>
 
                     <div class="sidebar-card">
@@ -278,7 +278,7 @@
                     <ul class="contact-info">
                         <li><i class="fas fa-map-marker-alt"></i> 123 Jewelry Lane, New York, NY 10001</li>
                         <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> davidyagudayev2018@gmail.com</li>
+                        <li><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Sat: 9AM-8PM</li>
                     </ul>
                 </div>
