--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <h4>Contact Info</h4>
                     <ul class="contact-info">
                         <li><i class="fas fa-phone"></i> <strong>929-648-0535</strong></li>
-                        <li><i class="fas fa-envelope"></i> davidyagudayev2018@gmail.com</li>
+                        <li><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</li>
                         <li><i class="fas fa-globe"></i> Online Store Only</li>
                     </ul>
                 </div>
