--- a/product-details.html
+++ b/product-details.html
@@ -15,7 +15,7 @@
                 <div class="top-bar-content">
                     <div class="contact-info">
                         <span><i class="fas fa-phone"></i> +1 (555) 123-4567</span>
-                        <span><i class="fas fa-envelope"></i> davidyagudayev2018@gmail.com</span>
+                        <span><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -423,7 +423,7 @@
                     <ul class="contact-info">
                         <li><i class="fas fa-map-marker-alt"></i> 123 Jewelry Lane, New York, NY 10001</li>
                         <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> davidyagudayev2018@gmail.com</li>
+                        <li><i class="fas fa-envelope"></i> iyjewlz7@gmail.com</li>
                         <li><i class="fas fa-clock"></i> Mon-Sat: 9AM-8PM</li>
                     </ul>
                 </div>
