Nav/logo update: logo image in header, switch nav to Shop Now, darken home hero text, update CTA to shop-now

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-content">
-                    <div class="logo-small">I&Y JEWLZ</div>
-                    
+                    <button class="mobile-menu-btn" id="mobileMenuBtn">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <a href="index.html" class="logo-brand">
+                        <img src="images/logo.jpg" alt="I&Y JEWLZ">
+                    </a>
+
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="#">Categories — Coming Soon</a></li>
+                        <li><a href="shop-now.html">Shop Now</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
-                    
+
                     <div class="nav-icons">
                         <button class="icon-btn search-btn" id="searchBtn">
                             <i class="fas fa-search"></i>
@@ -30,9 +34,6 @@
                         <button class="icon-btn cart-btn" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="badge" id="cartCount">0</span>
-                        </button>
-                        <button class="mobile-menu-btn" id="mobileMenuBtn">
-                            <i class="fas fa-bars"></i>
                         </button>
                     </div>
                 </div>
@@ -74,7 +75,7 @@
             <h1 class="hero-brand-name">I & Y JEWLZ</h1>
             <p class="hero-brand-tagline">Timeless Elegance</p>
             <p class="hero-brand-subtext">Lab Grown Diamonds • Premium Jewelry</p>
-            <a href="shop.html" class="btn btn-primary btn-large hero-landing-btn">Explore Collection</a>
+            <a href="shop-now.html" class="btn btn-primary btn-large hero-landing-btn">Shop Now</a>
         </div>
     </section>
 
@@ -234,7 +235,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="shop-now.html">Shop Now</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
