--- a/product-details.html
+++ b/product-details.html
@@ -29,15 +29,16 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-content">
-                    <div class="logo">
-                        <h1>I&Y JEWLZ</h1>
-                        <p class="tagline">Timeless Elegance</p>
-                    </div>
+                    <button class="mobile-menu-btn" id="mobileMenuBtn">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <a href="index.html" class="logo-brand">
+                        <img src="images/logo.jpg" alt="I&Y JEWLZ">
+                    </a>
                     
                     <ul class="nav-menu" id="navMenu">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="#">Categories — Coming Soon</a></li>
+                        <li><a href="shop-now.html">Shop Now</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -49,9 +50,6 @@
                         <button class="icon-btn cart-btn" id="cartBtn">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="badge" id="cartCount">0</span>
-                        </button>
-                        <button class="mobile-menu-btn" id="mobileMenuBtn">
-                            <i class="fas fa-bars"></i>
                         </button>
                     </div>
                 </div>
@@ -395,7 +393,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="shop-now.html">Shop Now</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
